--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "express": "^4.19.2",
+    "jasmine-spec-reporter": "^7.0.0",
+    "protractor": "^7.0.0",
     "rxjs": "~7.8.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "sweetalert2": "^11.10.8",
+    "ts-node": "^10.9.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
